Add form. Log value in input.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <title>Recipe Search</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" charset="utf-8"></script>
+    <script defer src="main.js" charset="utf-8"></script>
   </head>
   <body class='wrapper'>
     <header>
-      <input class="search" type="text" name="" value="">
+      <form class="search" placeholder="Search Recipes" action="index.html" method="get">
+        <input type="text" id="search">
+        <button type="submit" name="button">Search</button>
+      </form>
     </header>
     <main>
       <img src="" alt="">
