Rename variables in main.js. Add name to input.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body class='wrapper'>
     <header>
       <form class="search" placeholder="Search Recipes" action="index.html" method="get">
-        <input type="text" id="search">
-        <button type="submit" name="button">Search</button>
+        <input type="text" id="search" name="q">
+        <button type="submit">Search</button>
       </form>
     </header>
     <main>
